--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -2,30 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66debc4c-daba-426a-9eaf-3df6efeb332d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>urlDrugName</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>effectiveness</th>\n",
+       "      <th>sideEffects</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>benefitsReview</th>\n",
+       "      <th>sideEffectsReview</th>\n",
+       "      <th>commentsReview</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2202</td>\n",
+       "      <td>enalapril</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Highly Effective</td>\n",
+       "      <td>Mild Side Effects</td>\n",
+       "      <td>management of congestive heart failure</td>\n",
+       "      <td>slowed the progression of left ventricular dys...</td>\n",
+       "      <td>cough, hypotension , proteinuria, impotence , ...</td>\n",
+       "      <td>monitor blood pressure , weight and asses for ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3117</td>\n",
+       "      <td>ortho-tri-cyclen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Highly Effective</td>\n",
+       "      <td>Severe Side Effects</td>\n",
+       "      <td>birth prevention</td>\n",
+       "      <td>Although this type of birth control has more c...</td>\n",
+       "      <td>Heavy Cycle, Cramps, Hot Flashes, Fatigue, Lon...</td>\n",
+       "      <td>I Hate This Birth Control, I Would Not Suggest...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1146</td>\n",
+       "      <td>ponstel</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Highly Effective</td>\n",
+       "      <td>No Side Effects</td>\n",
+       "      <td>menstrual cramps</td>\n",
+       "      <td>I was used to having cramps so badly that they...</td>\n",
+       "      <td>Heavier bleeding and clotting than normal.</td>\n",
+       "      <td>I took 2 pills at the onset of my menstrual cr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3947</td>\n",
+       "      <td>prilosec</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Marginally Effective</td>\n",
+       "      <td>Mild Side Effects</td>\n",
+       "      <td>acid reflux</td>\n",
+       "      <td>The acid reflux went away for a few months aft...</td>\n",
+       "      <td>Constipation, dry mouth and some mild dizzines...</td>\n",
+       "      <td>I was given Prilosec prescription at a dose of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>lyrica</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Marginally Effective</td>\n",
+       "      <td>Severe Side Effects</td>\n",
+       "      <td>fibromyalgia</td>\n",
+       "      <td>I think that the Lyrica was starting to help w...</td>\n",
+       "      <td>I felt extremely drugged and dopey.  Could not...</td>\n",
+       "      <td>See above</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t')\n",
+    "\n",
+    "drugs.head()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Local Python",
    "language": "python",
-   "name": "python3"
+   "name": "local-python"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "python3",
    "version": "3.12.3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
