--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "66debc4c-daba-426a-9eaf-3df6efeb332d",
    "metadata": {
     "collapsed": false,
@@ -108,6 +108,67 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       urlDrugName  rating         effectiveness  \\\n",
+       "0        2202         enalapril       4      Highly Effective   \n",
+       "1        3117  ortho-tri-cyclen       1      Highly Effective   \n",
+       "2        1146           ponstel      10      Highly Effective   \n",
+       "3        3947          prilosec       3  Marginally Effective   \n",
+       "4        1951            lyrica       2  Marginally Effective   \n",
+       "\n",
+       "           sideEffects                               condition  \\\n",
+       "0    Mild Side Effects  management of congestive heart failure   \n",
+       "1  Severe Side Effects                        birth prevention   \n",
+       "2      No Side Effects                        menstrual cramps   \n",
+       "3    Mild Side Effects                             acid reflux   \n",
+       "4  Severe Side Effects                            fibromyalgia   \n",
+       "\n",
+       "                                      benefitsReview  \\\n",
+       "0  slowed the progression of left ventricular dys...   \n",
+       "1  Although this type of birth control has more c...   \n",
+       "2  I was used to having cramps so badly that they...   \n",
+       "3  The acid reflux went away for a few months aft...   \n",
+       "4  I think that the Lyrica was starting to help w...   \n",
+       "\n",
+       "                                   sideEffectsReview  \\\n",
+       "0  cough, hypotension , proteinuria, impotence , ...   \n",
+       "1  Heavy Cycle, Cramps, Hot Flashes, Fatigue, Lon...   \n",
+       "2         Heavier bleeding and clotting than normal.   \n",
+       "3  Constipation, dry mouth and some mild dizzines...   \n",
+       "4  I felt extremely drugged and dopey.  Could not...   \n",
+       "\n",
+       "                                      commentsReview  \n",
+       "0  monitor blood pressure , weight and asses for ...  \n",
+       "1  I Hate This Birth Control, I Would Not Suggest...  \n",
+       "2  I took 2 pills at the onset of my menstrual cr...  \n",
+       "3  I was given Prilosec prescription at a dose of...  \n",
+       "4                                          See above  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd #importing pandas to use dataframes\n",
+    "\n",
+    "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t') #pd.read_csv is used to load the dataframe however since the datta is in .tsv format, sep= '\\t'\n",
+    "                                                        #is used because the values of a .tsv file is separated by tabs\n",
+    "drugs.head(5) #this is used to see the first 5 rows of the tsv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e277274-09dd-4173-8105-1284c662d807",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3107, 9)"
       ]
      },
      "execution_count": 6,
@@ -116,30 +177,161 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t')\n",
-    "\n",
-    "drugs.head()"
+    "drugs.shape #used to see the number of rows and columns (rows, columns)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c3e8dc05-2cfc-48f3-97bc-e7faa591285f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3107 entries, 0 to 3106\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   Unnamed: 0         3107 non-null   int64 \n",
+      " 1   urlDrugName        3107 non-null   object\n",
+      " 2   rating             3107 non-null   int64 \n",
+      " 3   effectiveness      3107 non-null   object\n",
+      " 4   sideEffects        3107 non-null   object\n",
+      " 5   condition          3106 non-null   object\n",
+      " 6   benefitsReview     3089 non-null   object\n",
+      " 7   sideEffectsReview  3032 non-null   object\n",
+      " 8   commentsReview     3095 non-null   object\n",
+      "dtypes: int64(2), object(7)\n",
+      "memory usage: 218.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "drugs.info() #this is also used to see the number of rows and columns\n",
+    "             #this is used to show the number of non-null values in each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0473574a-8bfc-4bed-a94b-1f30d493b399",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'urlDrugName', 'rating', 'effectiveness', 'sideEffects',\n",
+       "       'condition', 'benefitsReview', 'sideEffectsReview', 'commentsReview'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drugs.columns  #shows all columns in the dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd9a586e-95c1-421a-9098-1ba4cc4f15e2",
+   "metadata": {},
+   "source": [
+    "### Identify Key Columns: \n",
+    "- Determine which column contains the text data that you will\n",
+    "analyze for sentiment.\n",
+    "  - urlDrugName\n",
+    "  - sideEffects\n",
+    "  - sideEffectsReview\n",
+    "\n",
+    "- Identify the column that contains the sentiment labels\n",
+    "  - sideEffects\n",
+    "      - Extremely Severe Side Effects\n",
+    "      - Severe Side Effects\n",
+    "      - Moderate Side Effects\n",
+    "      - Mild Side Effects\n",
+    "      - No Side Effects\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "760aaee5-531c-41c8-8c22-5df63b48572b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Mild Side Effects', 'Severe Side Effects', 'No Side Effects',\n",
+       "       'Extremely Severe Side Effects', 'Moderate Side Effects'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sideEffects = drugs['sideEffects'].unique()\n",
+    "sideEffects\n",
+    "\n",
+    "#this is used to see unique rows in the 'sideEffects' column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55812496-69aa-4d58-ab45-12957f950950",
+   "metadata": {},
+   "source": [
+    "### References:\n",
+    "\n",
+    "GeeksforGeeks. (2022, September 13). How to load a TSV file into a Pandas DataFrame? GeeksforGeeks. https://www.geeksforgeeks.org/how-to-load-a-tsv-file-into-a-pandas-dataframe/\n",
+    "\n",
+    "GeeksforGeeks. (2024, November 28). Get unique values from a column in Pandas DataFrame. GeeksforGeeks. https://www.geeksforgeeks.org/get-unique-values-from-a-column-in-pandas-dataframe/\n",
+    "\n",
+    "Kallumadi, S. & Grer, F. (2018). Drug Reviews (Druglib.com) [Dataset]. UCI Machine Learning Repository. https://doi.org/10.24432/C55G6J.\n",
+    "\n",
+    "Markdown Cells — Jupyter Notebook 7.4.2 documentation. (2015). Readthedocs.io.\n",
+    "https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html\n",
+    "\n",
+    "Running the Notebook — Jupyter Documentation 4.1.1 alpha documentation. (n.d.). https://docs.jupyter.org/en/latest/running.html#running\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d77aae0-90cb-44f2-9e56-940381e7c2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Local Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "local-python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "python3",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   },
   "widgets": {
