--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -1058,35 +1058,45 @@
     "y_pred = model.predict(X_test_tfidf) #make predictions using the test data\n",
     "\n",
     "accuracy = accuracy_score(y_test, y_pred) # evaluate the model on its accuracy\n",
-    "report = classification_report(y_test, y_pred) # create a report of more details abo\n",
+    "report = classification_report(y_test, y_pred) # create a report of more details about the model and its predictions\n",
     "\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")\n",
-    "print(\"Classification Report:\\n\", report)"
+    "print(f\"Accuracy: {accuracy:.4f}\") # print the accuracy \n",
+    "print(\"Classification Report:\\n\", report) #print the report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a034b5a-d898-4594-9666-b67ff540a42b",
+   "metadata": {},
+   "source": [
+    "## Refernces\n",
+    "model.fit() in TensorFlow\n",
+    "By GeeksforGeeks: GeeksforGeeksYear: 2025URL: https://www.geeksforgeeks.org/model-fit-in-tensorflow/\n",
+    "\n",
+    "Stack Overflow\n",
+    "By Anonymous: Stack OverflowYear: 2014URL: https://stackoverflow.com/questions/27697766/understanding-min-df-and-max-df-in-scikit-countvectorizer\n",
+    "\n",
+    "TfidfVectorizer\n",
+    "By Anonymous: scikit-learnYear: 2025URL: https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html\n",
+    "\n",
+    "train_test_split\n",
+    "By Anonymous: scikit-learnYear: 2025URL: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+    "\n",
+    "\n",
+    "\n",
+    "Tutorial: Quickstart — TextBlob 0.19.0 documentation\n",
+    "    By Anonymous: Readthedocs.ioYear: 2025URL: https://textblob.readthedocs.io/en/dev/quickstart.html\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "27735bb8-ea95-48fe-bb96-4d7b6aede586",
+   "execution_count": null,
+   "id": "9ad2d1e3-cca4-46f3-80c7-8185b83b1bd7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sideEffects\n",
-      "Mild Side Effects                1016\n",
-      "No Side Effects                   858\n",
-      "Moderate Side Effects             614\n",
-      "Severe Side Effects               369\n",
-      "Extremely Severe Side Effects     175\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(clean_drugs['sideEffects'].value_counts())"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
