--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -156,6 +156,9 @@
     "\n",
     "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t') #pd.read_csv is used to load the dataframe however since the datta is in .tsv format, sep= '\\t'\n",
     "                                                        #is used because the values of a .tsv file is separated by tabs\n",
+    "#The dataset is the Drug Reviews (Druglib.com) dataset from the UCI repository\n",
+    "#by Kallumadi, S. & Grer, F. (2018)\n",
+    "\n",
     "drugs.head(5) #this is used to see the first 5 rows of the tsv file"
    ]
   },
@@ -278,10 +281,8 @@
     }
    ],
    "source": [
-    "sideEffects = drugs['sideEffects'].unique()\n",
-    "sideEffects\n",
-    "\n",
-    "#this is used to see unique rows in the 'sideEffects' column"
+    "sideEffects = drugs['sideEffects'].unique() #this is used to see unique rows in the 'sideEffects' column\n",
+    "sideEffects #then we print out the value of the sideEffects array"
    ]
   },
   {
