--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,71 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "id": "80abf2bf-72c4-4b44-afb1-23e7338abee6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/rendeeru/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd #for adding dataframe support\n",
-    "import numpy as np\n",
+    "import pandas as pd #import for adding the dataframes we will manipulate.\n",
+    "#this import is the standard when doing the data analysis on data sets\n",
     "from sklearn.model_selection import train_test_split #for splitting the data set into training and testing data\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer #for vectorization of dataset\n",
+    "#Our model will be trained with the training data, and tested with another set of data to see if it is accurate on newly seen data\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer #for Vectorization of dataset.\n",
+    "#with vectorization we essentially turn the text data of the dataset into numerical data\n",
     "from sklearn.linear_model import LogisticRegression #prediction model used for this dataset which contains categorical data\n",
+    "#We use regression models to try to describe the relationship of the idependent and dependent variables\n",
     "from sklearn.metrics import accuracy_score, classification_report #for measuring statistics for the data\n",
+    "#from these imports we can get the accuracy of the trained model when using test data, as well as more detailed figures\n",
     "import nltk #for downloading necessary resources\n",
-    "from nltk.corpus import stopwords #including stopwords array\n",
-    "import string # for string manipulation\n",
+    "from nltk.corpus import stopwords #Imports for getting the stopwords array. Words commonly filtered out before processing.\n",
+    "import string # Imports for string manipulation.\n",
+    "#We use this import when remove stopwords, lowercase the strings, and remove punctuation.\n",
     "from textblob import Word # used later for lemmatization\n",
-    "\n",
-    "# Download necessary NLTK resources (run this once)\n",
-    "nltk.download('stopwords') # common words that often don't hold semantic meaning\\\n",
-    "nltk.download('punkt')"
+    "#The Word class has a lot of useful functions for natural language processing.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 28,
    "id": "362a7aa8-2331-4346-adb5-0bcb6a87325d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t') #pd.read_csv is used to load the dataframe however since the datta is in .tsv format, sep= '\\t'\n",
-    "                                                        #is used because the values of a .tsv file is separated by tabs\n"
+    "drugs = pd.read_csv('drugLibTrain_raw.tsv', sep = '\\t') #pd.read_csv is used to load the dataframe.\n",
+    "#Since the data is in .tsv format, sep= '\\t' is used because the values of a .tsv file is separated by tabs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 29,
    "id": "cc3c8fbe-fde4-4e38-869a-97c7717c90dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_drugs = drugs.dropna(subset=['sideEffectsReview']) #remove rows with null values in the sideEffectsReview column"
+    "clean_drugs = drugs.dropna(subset=['sideEffectsReview']) #remove rows with null values in the sideEffectsReview column\n",
+    "#We ignore null data to maintain the quality and minimize errors in our analysis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 30,
    "id": "44cebc47-f522-4167-bd46-bbf231483adc",
    "metadata": {},
    "outputs": [
@@ -74,12 +57,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1543/468633167.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1091/3511437286.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(splitstring) #applies the lowercasing function to all strings in the column\n"
+      "  clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(lowercase) #applies the lowercasing function to all strings in the column\n"
      ]
     },
     {
@@ -216,24 +199,28 @@
        "4                                          See above  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def splitstring(x): #function for lowercasing strings\n",
-    "    x = \" \".join(x.lower() for x in x.split()) #line used to lowercase string\n",
-    "    return x #return lowercased string\n",
+    "def lowercase(x): #function for lowercasing strings.\n",
+    "#here we define the function, you can also use a lambda, but we chose to do this to make it more clear\n",
+    "    x = \" \".join(x.lower() for x in x.split()) #line used to lowercase string.\n",
+    "    #the string import provides this functionality, we split the string into individual words, lowercase them\n",
+    "    #and put it back together\n",
+    "    return x #return lowercased string. This will be done for every row\n",
     "\n",
-    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(splitstring) #applies the lowercasing function to all strings in the column\n",
+    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(lowercase) #applies the lowercasing function to all strings in the column\n",
+    "#This will be the first of a few preprocessing steps that we will do.\n",
     "\n",
-    "clean_drugs.head(5) #view first 5 rows from the dataset"
+    "clean_drugs.head() #view first 5 rows from the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 31,
    "id": "41ecd087-81b5-418a-b6ed-e5664a7a461f",
    "metadata": {},
    "outputs": [
@@ -243,9 +230,9 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
-      "/tmp/ipykernel_1543/3553593620.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "/tmp/ipykernel_1091/3123732567.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
       "  clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].str.replace('[^\\w\\s]', \"\", regex = True) #removes punctuation from string\n",
-      "/tmp/ipykernel_1543/3553593620.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1091/3123732567.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -387,20 +374,22 @@
        "4                                          See above  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].str.replace('[^\\w\\s]', \"\", regex = True) #removes punctuation from string\n",
+    "#We use a regex expression to remove any string patterns that match the regex expressions for punctuations\n",
+    "#with an empty string\n",
     "\n",
     "clean_drugs.head(5) #view first 5 rows from the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 32,
    "id": "a5943d19-fe69-4f4f-820c-695d15057125",
    "metadata": {},
    "outputs": [
@@ -408,7 +397,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1543/1105320111.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1091/1139616149.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -418,18 +407,24 @@
     }
    ],
    "source": [
-    "stop = stopwords.words('english') #initialize stopwords array\n",
+    "stop = stopwords.words('english') #Initialize stopwords array.\n",
+    "#the stop variable now contains a list of words to be removed.\n",
     "def replace_stopwords(x): #function for removing stopword\n",
+    "    #similar to earlier we define it, but you can also do a lambda function\n",
     "    x = \" \".join(x for x in x.split() if x not in stop) #removes stopwords from single string\n",
+    "    #here instead of converting the word like earlier, we just ignore words that are stopwords before joining\n",
     "    return x #return cleaned string\n",
+    "    #the return string will now not have any stopwords\n",
     "\n",
     "    \n",
-    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(replace_stopwords)  #applies the stopwords removing function to all strings in the column\n"
+    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(replace_stopwords)  #applies the stopwords removing function to all strings in the column\n",
+    "#Without stopwords, are model can more accurately assign meaning to the words in the model, without\n",
+    "#the problem of noise from the stopwords, which generally don't have meaning in language processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 33,
    "id": "8d885327-6cdf-48f1-92f3-3e76e98b0bb8",
    "metadata": {},
    "outputs": [
@@ -672,7 +667,7 @@
        "[3032 rows x 9 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 34,
    "id": "63c5f28d-fda5-4989-af07-2e0d8b0d79bc",
    "metadata": {},
    "outputs": [
@@ -691,7 +686,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1543/2316159903.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1091/221413025.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -710,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 35,
    "id": "0de4f7e3-1d83-463f-8dda-1b3ff5e235d8",
    "metadata": {},
    "outputs": [
@@ -953,7 +948,7 @@
        "[3032 rows x 9 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,21 +959,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 36,
    "id": "329468b6-45ae-4b1c-9d12-a21da51dffc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = clean_drugs['sideEffectsReview'] #puts the reviews on the x axis\n",
+    "#this represents the Independent variable of the review of itself\n",
     "y = clean_drugs['sideEffects'] #puts the corresponding side effects category on the y axis\n",
+    "#this repreesents the Dependent Variable of what category of sideEffect is the review\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split( #splits the data into training and testing data\n",
-    "    X, y, test_size = 0.2, random_state = 20, stratify = y) #parameters for splitting, the 2 colums, 20% for the testing data, some random state, and we stratify"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 20, stratify = y) \n",
+    "#splits the data into training and testing data\n",
+    "#The parameters for splitting are the independent and dependent variables, 20% for the testing data, some random state, and we stratify"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 37,
    "id": "2f152ba4-70a5-47b5-a026-ff1ab24b7e48",
    "metadata": {},
    "outputs": [
@@ -998,7 +996,7 @@
        "Name: sideEffectsReview, dtype: object"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,23 +1007,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 38,
    "id": "8507ef3c-cfd9-4b1f-a6ec-a9f1f0cf56af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer( #use the TfidVectorizer function to create a vectorizer object\n",
-    "    lowercase=True, stop_words='english', max_df=0.95, min_df=2, ngram_range=(1, 2)) #parameters for the vectorizer\n",
-    "#min and max df allows us to ignore words that appear too often or too infrequently\n",
+    "vectorizer = TfidfVectorizer(lowercase=True, max_df=0.95, min_df=2, ngram_range=(1, 3)) \n",
+    "#use the TfidVectorizer function to create a vectorizer object\n",
+    "#The parameters for the vectorizer are min and max df which allows us to ignore words that appear too often or too infrequently\n",
+    "#and the ngram range basically tells us to consider both single words, and groups of 3 words at most\n",
     "\n",
     "X_train_tfidf = vectorizer.fit_transform(X_train)  # calculates the statistics needed, then tranforms the data into numerical value from the statistics for the model to use\n",
+    "#the fitting of the data is essentially the vectorizer building the vocabulary from the data\n",
     "\n",
-    "X_test_tfidf = vectorizer.transform(X_test) # transforms the model, it doesn't need to fit because the statistics are still in the vectorizer"
+    "X_test_tfidf = vectorizer.transform(X_test) # transforms the model, it doesn't need to fit because the statistics are still in the vectorizer\n",
+    "#the transforming essentially turns the words into numbers based on their frequencies or importance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 39,
    "id": "c64b8f74-37cc-4d80-b527-e40be8a09b13",
    "metadata": {},
    "outputs": [
@@ -1033,35 +1034,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5305\n",
+      "Accuracy: 0.5354\n",
       "Classification Report:\n",
       "                                precision    recall  f1-score   support\n",
       "\n",
-      "Extremely Severe Side Effects       0.67      0.06      0.11        35\n",
-      "            Mild Side Effects       0.50      0.76      0.60       203\n",
-      "        Moderate Side Effects       0.36      0.23      0.28       123\n",
-      "              No Side Effects       0.68      0.75      0.71       172\n",
-      "          Severe Side Effects       0.32      0.12      0.18        74\n",
+      "Extremely Severe Side Effects       1.00      0.03      0.06        35\n",
+      "            Mild Side Effects       0.48      0.82      0.61       203\n",
+      "        Moderate Side Effects       0.31      0.20      0.24       123\n",
+      "              No Side Effects       0.79      0.71      0.75       172\n",
+      "          Severe Side Effects       0.41      0.15      0.22        74\n",
       "\n",
-      "                     accuracy                           0.53       607\n",
-      "                    macro avg       0.51      0.38      0.38       607\n",
-      "                 weighted avg       0.51      0.53      0.49       607\n",
+      "                     accuracy                           0.54       607\n",
+      "                    macro avg       0.60      0.38      0.37       607\n",
+      "                 weighted avg       0.55      0.54      0.49       607\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "model = LogisticRegression(random_state=42, solver='liblinear')  #Using logistic regression because the we wish to analyze categorical data\n",
+    "model = LogisticRegression(random_state=42, solver='liblinear')  #Using logistic regression because we wish to analyze categorical data\n",
+    "#We use a set random state so we can get a deterministic result every time we run.\n",
+    "#We specificy liblinear to be the solver, it is a c++ based library for find weights for the model\n",
+    "#usually used for smaller data sets like this\n",
     "\n",
-    "model.fit(X_train_tfidf, y_train) # training the model\n",
+    "model.fit(X_train_tfidf, y_train) # Here we are training the model\n",
+    "#The model adjusts its weights to better fit the data we are training it with\n",
     "\n",
-    "y_pred = model.predict(X_test_tfidf) #make predictions using the test data\n",
+    "y_pred = model.predict(X_test_tfidf) #We then make predictions using the test data.\n",
+    "#Here want to see if the model can correctly predict that the category of the sideEffect\n",
+    "#based on newly seen reviews\n",
     "\n",
-    "accuracy = accuracy_score(y_test, y_pred) # evaluate the model on its accuracy\n",
+    "accuracy = accuracy_score(y_test, y_pred) # Here we evaluate the model on its accuracy\n",
+    "#The accuracy is the percantage of correct predictions on the test data\n",
     "report = classification_report(y_test, y_pred) # create a report of more details about the model and its predictions\n",
+    "#precision measures correct predictions, recall measures how many were correctly identified, f1-score is the mean\n",
+    "#of precision and recall\n",
+    "#and support shows occurances of each of the categories\n",
     "\n",
-    "print(f\"Accuracy: {accuracy:.4f}\") # print the accuracy \n",
-    "print(\"Classification Report:\\n\", report) #print the report"
+    "print(f\"Accuracy: {accuracy:.4f}\") # print the accuracy.\n",
+    "#as you can see the model we trained is about 53% accurate\n",
+    "print(\"Classification Report:\\n\", report) #print the report\n",
+    "#as you can see the model is ok in some categories, especially with a larger support,\n",
+    "#but because of the lesser amount of data for other categories, some have more or less false positives\n",
+    "#false negatives, as seen with the precision and recall respectively"
    ]
   },
   {
@@ -1089,14 +1104,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ad2d1e3-cca4-46f3-80c7-8185b83b1bd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
