--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -219,15 +219,14 @@
    "source": [
     "def lowercase(x): #function for lowercasing strings.\n",
     "#here we define the function, you can also use a lambda, but we chose to do this to make it more clear\n",
-    "    x = \" \".join(x.lower() for x in x.split()) #line used to lowercase string.\n",
-    "    #the string import provides this functionality, we split the string into individual words, lowercase them\n",
-    "    #and put it back together\n",
-    "    return x #return lowercased string. This will be done for every row\n",
+    "    return \" \".join(x.lower() for x in x.split()) #line used to lowercase string.\n",
+    "#the string import provides this functionality, we split the string into individual words, lowercase them\n",
+    "#and put it back together\n",
     "\n",
     "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(lowercase) #applies the lowercasing function to all strings in the column\n",
     "#This will be the first of a few preprocessing steps that we will do.\n",
-    "\n",
-    "clean_drugs.head() #view first 5 rows from the dataset"
+    "clean_drugs.head() #view first 5 rows from the dataset.\n",
+    "#This is used to verify if lowercasing function is applied"
    ]
   },
   {
@@ -395,8 +394,8 @@
     "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].str.replace('[^\\w\\s]', \"\", regex = True) #removes punctuation from string\n",
     "#We use a regex expression to remove any string patterns that match the regex expressions for punctuations\n",
     "#with an empty string\n",
-    "\n",
-    "clean_drugs.head(5) #view first 5 rows from the dataset"
+    "clean_drugs.head(5) #view first 5 rows from the dataset\n",
+    "#this is used to verify if punctuations are removed"
    ]
   },
   {
@@ -422,16 +421,11 @@
     "stop = stopwords.words('english') #Initialize stopwords array.\n",
     "#the stop variable now contains a list of words to be removed.\n",
     "def replace_stopwords(x): #function for removing stopword\n",
-    "    #similar to earlier we define it, but you can also do a lambda function\n",
-    "    x = \" \".join(x for x in x.split() if x not in stop) #removes stopwords from single string\n",
+    "#similar to earlier we define it, but you can also do a lambda function\n",
+    "    return \" \".join(x for x in x.split() if x not in stop) #removes stopwords from single string\n",
     "    #here instead of converting the word like earlier, we just ignore words that are stopwords before joining\n",
-    "    return x #return cleaned string\n",
-    "    #the return string will now not have any stopwords\n",
-    "\n",
-    "    \n",
-    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(replace_stopwords)  #applies the stopwords removing function to all strings in the column\n",
-    "#Without stopwords, are model can more accurately assign meaning to the words in the model, without\n",
-    "#the problem of noise from the stopwords, which generally don't have meaning in language processing"
+    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(replace_stopwords) #applies the stopwords removing function to all strings in the column\n",
+    "#Without stopwords, are model can more accurately assign meaning to the words in the model, without"
    ]
   },
   {
@@ -708,11 +702,12 @@
     }
    ],
    "source": [
-    "def lemmatizedrugs(x): #function for lemmatization\n",
-    "    x = \" \".join([Word(word).lemmatize() for word in x.split()]) #lemmatizes or replaces variations of words with its base word\n",
-    "    return x #return lemmatized string\n",
+    "def lemmatizedrugs(x): #this is a function for lemmatization\n",
+    "    return \" \".join([Word(word).lemmatize() for word in x.split()]) #this funtion lemmatizes or replaces variations of words with its base word\n",
+    "#It splits into individual words, lemmatizes them and joins it as a new string\n",
     "\n",
-    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(lemmatizedrugs) #lemmatizes the column"
+    "clean_drugs['sideEffectsReview'] = clean_drugs['sideEffectsReview'].apply(lemmatizedrugs) # this is used to lemmatizes the column.\n",
+    "#Lemmatization convers some words into their base words."
    ]
   },
   {
@@ -966,7 +961,8 @@
     }
    ],
    "source": [
-    "clean_drugs #view dataset"
+    "clean_drugs #this is used to view all the dataset\n",
+    "#we used this to verify if the the lemmitization function is applied"
    ]
   },
   {
@@ -984,37 +980,6 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 20, stratify = y) \n",
     "#splits the data into training and testing data\n",
     "#The parameters for splitting are the independent and dependent variables, 20% for the testing data, some random state, and we stratify"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "2f152ba4-70a5-47b5-a026-ff1ab24b7e48",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2148    side effect far slight itch around injectionsi...\n",
-       "1098    sever irritation peeling outerlayer skin redne...\n",
-       "1425    felt like hopped whole time skin would feel cr...\n",
-       "660     ive taken lamictal different combo anticonvuls...\n",
-       "932     increase bloating increased feeling needing ur...\n",
-       "1831     unpleasant side effect estradiol could ascertain\n",
-       "1416                                 side effect remember\n",
-       "55      taking medicaion experience side effect thing ...\n",
-       "2228    initially frist two week medication patient co...\n",
-       "1125    erectile problemssevere anxiety panic attack n...\n",
-       "Name: sideEffectsReview, dtype: object"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.head(10) #view the first 10 training data entries"
    ]
   },
   {
